define JSON_C_CFLAGS and JSON_C_LIBS in rules/make.in and use them in Makefile.in

--- a/bin/dnssec/Makefile.in
+++ b/bin/dnssec/Makefile.in
@@ -15,7 +15,8 @@ VERSION=@BIND9_VERSION@
 
 @BIND9_MAKE_INCLUDES@
 
-CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ @JSON_C_CFLAGS@
+CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ \
+		${JSON_C_CFLAGS}
 
 CDEFINES =	-DVERSION=\"${VERSION}\"
 CWARNINGS =
@@ -29,9 +30,9 @@ ISCDEPLIBS =	../../lib/isc/libisc.@A@
 
 DEPLIBS =	${DNSDEPLIBS} ${ISCDEPLIBS}
 
-LIBS =		${DNSLIBS} ${ISCLIBS} @JSON_C_LIBS@ @LIBS@
+LIBS =		${DNSLIBS} ${ISCLIBS} ${JSON_C_LIBS} @LIBS@
 
-NOSYMLIBS =	${DNSLIBS} ${ISCNOSYMLIBS} @JSON_C_LIBS@ @LIBS@
+NOSYMLIBS =	${DNSLIBS} ${ISCNOSYMLIBS} ${JSON_C_LIBS} @LIBS@
 
 # Alphabetically
 TARGETS =	dnssec-cds@EXEEXT@ dnssec-dsfromkey@EXEEXT@ \
