--- a/bin/check/Makefile.in
+++ b/bin/check/Makefile.in
@@ -15,8 +15,9 @@ VERSION=@BIND9_VERSION@
 
 @BIND9_MAKE_INCLUDES@
 
-CINCLUDES =	${NS_INCLUDES} ${BIND9_INCLUDES} ${DNS_INCLUDES} ${ISCCFG_INCLUDES} \
-		${ISC_INCLUDES} @OPENSSL_INCLUDES@ @JSON_C_CFLAGS@
+CINCLUDES =	${NS_INCLUDES} ${BIND9_INCLUDES} ${DNS_INCLUDES} \
+		${ISCCFG_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ \
+		${JSON_C_CFLAGS}
 
 CDEFINES = 	-DNAMED_CONFFILE=\"${sysconfdir}/named.conf\"
 CWARNINGS =
@@ -34,8 +35,8 @@ ISCDEPLIBS =	../../lib/isc/libisc.@A@
 BIND9DEPLIBS =	../../lib/bind9/libbind9.@A@
 NSDEPENDLIBS =	../../lib/ns/libns.@A@
 
-LIBS =		${ISCLIBS} @JSON_C_LIBS@ @LIBS@
-NOSYMLIBS =	${ISCNOSYMLIBS} @JSON_C_LIBS@ @LIBS@
+LIBS =		${ISCLIBS} ${JSON_C_LIBS} @LIBS@
+NOSYMLIBS =	${ISCNOSYMLIBS} ${JSON_C_LIBS} @LIBS@
 
 SUBDIRS =
 
