--- a/bin/tests/system/dyndb/driver/Makefile.in
+++ b/bin/tests/system/dyndb/driver/Makefile.in
@@ -13,7 +13,8 @@ top_srcdir =	@top_srcdir@
 
 @BIND9_MAKE_INCLUDES@
 
-CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ @JSON_C_CFLAGS@
+CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ \
+		${JSON_C_CFLAGS}
 
 CDEFINES =
 CWARNINGS =
