--- a/bin/tests/system/tkey/Makefile.in
+++ b/bin/tests/system/tkey/Makefile.in
@@ -15,7 +15,8 @@ VERSION=@BIND9_VERSION@
 
 @BIND9_MAKE_INCLUDES@
 
-CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ @JSON_C_CFLAGS@
+CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@ \
+		${JSON_C_CFLAGS}
 
 CDEFINES =
 CWARNINGS =
@@ -28,7 +29,7 @@ ISCDEPLIBS =	../../../../lib/isc/libisc.@A@
 
 DEPLIBS =	${DNSDEPLIBS} ${ISCDEPLIBS}
 
-LIBS =		${DNSLIBS} ${ISCLIBS} @JSON_C_LIBS@ @LIBS@
+LIBS =		${DNSLIBS} ${ISCLIBS} ${JSON_C_LIBS} @LIBS@
 
 TARGETS =	keycreate@EXEEXT@ keydelete@EXEEXT@
 
