--- a/lib/bind9/Makefile.in
+++ b/lib/bind9/Makefile.in
@@ -18,7 +18,8 @@ VERSION=@BIND9_VERSION@
 @BIND9_MAKE_INCLUDES@
 
 CINCLUDES =	-I. ${BIND9_INCLUDES} ${DNS_INCLUDES} ${ISC_INCLUDES} \
-		${ISCCFG_INCLUDES} ${NS_INCLUDES} @OPENSSL_INCLUDES@ @JSON_C_CFLAGS@
+		${ISCCFG_INCLUDES} ${NS_INCLUDES} @OPENSSL_INCLUDES@ \
+		${JSON_C_CFLAGS}
 
 CDEFINES =
 CWARNINGS =
