--- a/lib/isccc/tests/Makefile.in
+++ b/lib/isccc/tests/Makefile.in
@@ -19,7 +19,8 @@ VERSION=@BIND9_VERSION@
 
 @BIND9_MAKE_INCLUDES@
 
-CINCLUDES =	-I. -Iinclude ${ISCCC_INCLUDES} ${ISC_INCLUDES} @CMOCKA_CFLAGS@ @JSON_C_CFLAGS@
+CINCLUDES =	-I. -Iinclude ${ISCCC_INCLUDES} ${ISC_INCLUDES} \
+		@CMOCKA_CFLAGS@ ${JSON_C_CFLAGS}
 CDEFINES =
 
 ISCLIBS =	../../isc/libisc.@A@ @OPENSSL_LIBS@
