--- a/make/rules.in
+++ b/make/rules.in
@@ -116,6 +116,9 @@ BUILD_CPPFLAGS = @BUILD_CPPFLAGS@
 BUILD_LDFLAGS = @BUILD_LDFLAGS@
 BUILD_LIBS = @BUILD_LIBS@
 
+JSON_C_CFLAGS = @JSON_C_CFLAGS@
+JSON_C_LIBS = @JSON_C_LIBS@
+
 LFS_CFLAGS = @LFS_CFLAGS@
 LFS_LDFLAGS = @LFS_LDFLAGS@
 LFS_LIBS = @LFS_LIBS@
