--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -498,3 +498,25 @@ unit:geoip:sid:amd64:
   <<: *unit_test_job
   dependencies:
     - pkcs11:sid:amd64
+
+# Jobs for testing --with-geoip2 builds on Debian Sid (amd64)
+
+geoip2:sid:amd64:
+  variables:
+    CC: gcc
+    CFLAGS: "-Wall -Wextra -O2 -g"
+    EXTRA_CONFIGURE: "--without-geoip --with-geoip2"
+  <<: *debian_sid_amd64_image
+  <<: *build_job
+
+system:geoip2:sid:amd64:
+  <<: *debian_sid_amd64_image
+  <<: *system_test_job
+  dependencies:
+    - pkcs11:sid:amd64
+
+unit:geoip2:sid:amd64:
+  <<: *debian_sid_amd64_image
+  <<: *unit_test_job
+  dependencies:
+    - pkcs11:sid:amd64
