--- a/lib/isc/win32/libisc.def.in
+++ b/lib/isc/win32/libisc.def.in
@@ -41,6 +41,7 @@ isc__buffer_putuint16
 isc__buffer_putuint24
 isc__buffer_putuint32
 isc__buffer_putuint48
+isc__buffer_putuint64
 isc__buffer_putuint8
 isc__buffer_region
 isc__buffer_remainingregion
@@ -147,6 +148,7 @@ isc_buffer_free
 isc_buffer_getuint16
 isc_buffer_getuint32
 isc_buffer_getuint48
+isc_buffer_getuint64
 isc_buffer_getuint8
 isc_buffer_printf
 isc_buffer_putdecint
