--- a/lib/dns/win32/libdns.def.in
+++ b/lib/dns/win32/libdns.def.in
@@ -315,6 +315,15 @@ dns_dns64_create
 dns_dns64_destroy
 dns_dns64_next
 dns_dns64_unlink
+dns_dnsrps_2policy
+dns_dnsrps_trig2type
+dns_dnsrps_type2trig
+dns_dnsrps_server_create
+dns_dnsrps_server_destroy
+dns_dnsrps_view_init
+dns_dnsrps_connect
+dns_dnsrps_rewrite_init
+dns_resolver_setfuzzing
 dns_dnssec_findmatchingkeys
 dns_dnssec_findzonekeys
 dns_dnssec_keyactive
@@ -973,8 +982,24 @@ dns_soa_setminimum
 dns_soa_setrefresh
 dns_soa_setretry
 dns_soa_setserial
+dns_dnsrps_2policy
+dns_dnsrps_trig2type
+dns_dnsrps_type2trig
+dns_dnsrps_server_create
+dns_dnsrps_server_destroy
+dns_dnsrps_view_init
+dns_dnsrps_connect
+dns_dnsrps_rewrite_init
+dns_resolver_setfuzzing
 dns_ssu_external_match
 dns_ssu_mtypefromstring
+dns_ssurule_isgrant
+dns_ssurule_identity
+dns_ssurule_matchtype
+dns_ssurule_name
+dns_ssurule_types
+dns_ssutable_firstrule
+dns_ssutable_nextrule
 dns_ssutable_addrule
 dns_ssutable_attach
 dns_ssutable_checkrules
