--- a/lib/isc/win32/libisc.def.in
+++ b/lib/isc/win32/libisc.def.in
@@ -267,6 +267,7 @@ isc_ht_iter_first
 isc_ht_iter_next
 isc_httpd_addheader
 isc_httpd_addheaderuint
+isc_httpd_endheaders
 isc_httpd_response
 isc_httpd_setfinishhook
 isc_httpdmgr_addurl
