--- a/lib/dns/tests/Makefile.in
+++ b/lib/dns/tests/Makefile.in
@@ -33,6 +33,7 @@ SRCS =		acl_test.c \
 		dbiterator_test.c \
 		dh_test.c \
 		dispatch_test.c \
+		dns64_test.c \
 		dnstap_test.c \
 		dst_test.c \
 		dnstest.c \
@@ -67,6 +68,7 @@ TARGETS =	acl_test@EXEEXT@ \
 		dbversion_test@EXEEXT@ \
 		dh_test@EXEEXT@ \
 		dispatch_test@EXEEXT@ \
+		dns64_test@EXEEXT@ \
 		dnstap_test@EXEEXT@ \
 		dst_test@EXEEXT@ \
 		geoip_test@EXEEXT@ \
@@ -129,6 +131,11 @@ dh_test@EXEEXT@: dh_test.@O@ dnstest.@O@ ${ISCDEPLIBS} ${DNSDEPLIBS}
 dispatch_test@EXEEXT@: dispatch_test.@O@ dnstest.@O@ ${ISCDEPLIBS} ${DNSDEPLIBS}
 	${LIBTOOL_MODE_LINK} ${PURIFY} ${CC} ${CFLAGS} \
 		${LDFLAGS} -o $@ dispatch_test.@O@ dnstest.@O@ \
+		${DNSLIBS} ${ISCLIBS} ${LIBS}
+
+dns64_test@EXEEXT@: dns64_test.@O@ ${ISCDEPLIBS} ${DNSDEPLIBS}
+	${LIBTOOL_MODE_LINK} ${PURIFY} ${CC} ${CFLAGS} \
+		${LDFLAGS} -o $@ dns64_test.@O@ \
 		${DNSLIBS} ${ISCLIBS} ${LIBS}
 
 dnstap_test@EXEEXT@: dnstap_test.@O@ dnstest.@O@ ${ISCDEPLIBS} ${DNSDEPLIBS}
