--- a/bin/tests/system/dns64/ns4/named.conf.in
+++ b/bin/tests/system/dns64/ns4/named.conf.in
@@ -20,7 +20,7 @@ options {
 	transfer-source-v6 fd92:7065:b8e:fffe::10.53.0.4;
 	port @EXTRAPORT1@;
 	pid-file "named.pid";
-	listen-on port @PORT@ { 10.53.0.4; };
+	listen-on port @PORT@ { 10.53.0.4; };	// for start.pl
 	listen-on-v6 { fd92:7065:b8e:fffe::10.53.0.4; };
 	notify yes;
 	dnssec-validation yes;
