--- a/bin/tests/system/inline/ns3/named.conf
+++ b/bin/tests/system/inline/ns3/named.conf
@@ -6,8 +6,6 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
-/* $Id: named.conf,v 1.8 2012/02/23 06:53:15 marka Exp $ */
-
 // NS3
 
 include "../../common/rndc.key";
@@ -128,4 +126,13 @@ zone "inactivezsk" {
 	inline-signing yes;
 	auto-dnssec maintain;
 	file "inactivezsk.bk";
+};
+
+
+zone "remove-dnskeys" {
+	type slave;
+	masters { 10.53.0.2; };
+	inline-signing yes;
+	auto-dnssec maintain;
+	file "remove-dnskeys.db";
 };
