--- a/bin/tests/system/inline/ns2/named.conf
+++ b/bin/tests/system/inline/ns2/named.conf
@@ -6,8 +6,6 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
-/* $Id: named.conf,v 1.4 2012/02/23 07:09:28 tbox Exp $ */
-
 // NS2
 
 include "../../common/rndc.key";
@@ -63,5 +61,11 @@ zone "inactiveksk" {
 zone "inactivezsk" {
 	type master;
 	file "inactivezsk.db";
+	allow-update { any; };
+};
+
+zone "remove-dnskeys" {
+	type master;
+	file "remove-dnskeys.db";
 	allow-update { any; };
 };
